Fixed the Nav Toggle for all pages
played with the click event so that the main nav bar in mobile would not spill over into the main page content

--- a/static/main.css
+++ b/static/main.css
@@ -127,6 +127,17 @@ section {
     margin-top: 0px;
 }
 
+.about-container {
+    transition: margin-top 0.1s;
+    margin-top: 0px;
+}
+
+.contact-container {
+    transition: margin-top 0.1s;
+    margin-top: 0px;
+    padding: auto;
+}
+
 .intro{
     position: absolute;
     margin-top: 1rem;
@@ -134,6 +145,44 @@ section {
     margin-right: 42%;
 
 }
+
+/* Profile images styling */
+.profile-images {
+    width: 50%;
+    margin-bottom: 15px;
+    margin-left: 15%;
+    margin-top: 10px;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0);
+}
+
+.profile-images img {
+    max-width: 225px; /* or whatever size you prefer */
+    border-radius: 10px;
+    margin-left: 20%;
+
+    box-shadow: 5 5 10px rgba(0,0,0,0.1);
+}
+
+
+.skills-list {
+    list-style-type: none; /* Removes bullet points */
+    padding-left: 0;
+    display: flex;
+    flex-wrap: wrap; /* Allows list items to wrap to next line if there's no space */
+    gap: 15px; /* Spacing between items */
+}
+
+.skills-list li {
+    background-color: #f4f4f4; /* Light grey background */
+    padding: 8px 15px;
+    border-radius: 5px;
+    font-weight: 500; /* Makes text slightly bold */
+}
+
+
+
+
+
 
 /*DESKTOP CSS*/
 @media screen and (min-width: 768px) {
